==> reweiser3/freETarget/Software/ESP32/freeETarget/main/gpio.c <==
#include "freETarget.h"
#include "gpio.h"
#include "timer.h"
#include "diag_tools.h"
#include "stdio.h"
#include "json.h"
#include "token.h"
#include "compute_hit.h"
#include "nvs.h"
#include "nonvol.h"
#include "serial_io.h"
#include "nvs_flash.h"
#include "nvs.h"
#include "C:\Users\allan\esp\esp-idf\esp-idf\components\hal\include\hal\gpio_types.h"
#include "C:\Users\allan\esp\esp-idf\esp-idf\components\hal\include\hal\adc_types.h"
#include "C:\Users\allan\esp\esp-idf\esp-idf\components\esp_adc\include\esp_adc\adc_oneshot.h"
#include "driver\gpio.h"
#include "driver\ledc.h"
#include "timer.h"
#include "token.h"
#include "analog_io.h"
#include "esp_timer.h"
#include "sdkconfig.h"
#include "led_strip.h"
#include "led_strip_types.h"
#include "pcnt.h"
#include "pwm.h"
#include "gpio_define.h"
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_log.h"
#include "driver/rmt_tx.h"
#include "../managed_components/espressif__led_strip/src/led_strip_rmt_encoder.h"

void arm_timers(void)
{
  gpio_set_level(STOP_N, 0);      // Reset the timer
  pcnt_clear(N);
  pcnt_clear(E);                  // Reset the counters
  pcnt_clear(S);
  pcnt_clear(W);
  gpio_set_level(STOP_N, 1);      // Then enable it
  
  return;
}

void stop_timers(void)
{
  gpio_set_level(STOP_N, 0);      // Reset the timer

  return;
}

void trip_timers(void)
{
  gpio_set_level(STOP_N, 1);            // Let the flipflops go
  gpio_set_level(CLOCK_START, 1);       // and trigger the output 
  gpio_set_level(CLOCK_START, 0);
  return;
}

unsigned int read_DIP(void)
{
  unsigned int return_value = 0;

  if (gpio_get_level(DIP_A) != 0)
  {
   return_value |= 1;
  }

  if (gpio_get_level(DIP_B) != 0)
  {
    return_value |= 2;
  }

  if (gpio_get_level(DIP_C) != 0)
  {
    return_value |= 4;
  }

  if (gpio_get_level(DIP_D) != 0)
  {
    return_value |= 8;
  }

  return return_value;
}

void paper_on_off                               // Function to turn the motor on and off
(
  bool_t on                                     // on == true, turn on motor drive
)
{
  if ( on == true )
  {
    gpio_set_level(PAPER, PAPER_ON);            // Turn it on
  }
  else
  {
    gpio_set_level(PAPER, PAPER_OFF);            // Turn it off
  }

/*
 * No more, return
 */
  return;
}

 void multifunction_init(void)
 {
  unsigned int dip;

/*
 * Check to see if the DIP switch has been overwritten
 */
  if ( (HOLD1(json_multifunction2) == RAPID_RED) 
        || (HOLD1(json_multifunction2) == RAPID_GREEN))
  {
      gpio_set_level(DIP_A, 1);
      dip_mask = RED_MASK;
  }

  if (  (HOLD2(json_multifunction2) == RAPID_RED)
      || (HOLD2(json_multifunction2) == RAPID_GREEN ) )
  {
      gpio_set_level(DIP_C, 1);
      dip_mask |= GREEN_MASK;
  }

/*
 * Continue to read the DIP switch
 */
  dip = read_DIP();                     // Read the jumper header

  if ( dip == 0 )                       // No jumpers in place
  { 
    return;                             // Carry On
  }

  if ( CALIBRATE )                      // Calibration jumper in?
  {
    set_trip_point(0);
  }

  if ( DIP_SW_A && DIP_SW_B )           // Both switches closed?
  {
    factory_nonvol(false);              // Initalize the nonvol but do not calibrate
  }

  else
  {
    if ( DIP_SW_A )                     // Switch A pressed
    {
      is_trace = 10;                    // Turn on tracing
    }
  
    if ( DIP_SW_B )                     // Switch B pressed
    {

    }
  }
  
/*
 * The initialization override has been finished
 */
  return;
}

static void sw_state 
    (
    unsigned int action
    )
{     
  
  char s[128];                          // Holding string 
  
  if ( DLT(DLT_CRITICAL) )
  {
    printf("Switch action: %d", action);
  }

  switch (action)
  {
    case POWER_TAP:
      set_LED_PWM_now(json_LED_PWM);      // Yes, a quick press to turn the LED on
      vTaskDelay(ONE_SECOND/2),
      set_LED_PWM_now(0);                 // Blink
      vTaskDelay(ONE_SECOND/2);
      set_LED_PWM_now(json_LED_PWM);      // and leave it on
      power_save = (long)json_power_save * 60L * (long)ONE_SECOND; // and resets the power save time
      json_power_save += 30;      
      sprintf(s, "\r\n{\"LED_PWM\": %d}\n\r", json_power_save);
      serial_to_all(s, ALL);  
        break;
        
    case PAPER_FEED:                      // The switch acts as paper feed control
      paper_on_off(true);                 // Turn on the paper drive
      while ( (DIP_SW_A || DIP_SW_B) )    // Keep it on while the switches are pressed 
      {
        continue; 
      }
      paper_on_off(false);                // Then turn it off
      break;

   case PAPER_SHOT:                       // The switch acts as paper feed control
      drive_paper();                      // Turn on the paper drive
      while ( (DIP_SW_A || DIP_SW_B) )    // Keep it on while the switches are pressed 
      {
        continue; 
      }
      break;
      
   case PC_TEST:                         // Send a fake score to the PC
      send_fake_score();
      break;
      
   case ON_OFF:                          // Turn the target off
      bye(0);                            // Stay in the Bye state until a wake up event comes along
      break;
      
    case LED_ADJUST:
      json_LED_PWM += 10;                 // Bump up the LED by 10%
      if ( json_LED_PWM > 100 )
      {
        json_LED_PWM = 0;                 // Force to zero on wrap around
      }
      set_LED_PWM_now(json_LED_PWM);      // Set the brightness
      nvs_set_i32(my_handle, NONVOL_LED_PWM, json_LED_PWM);   
      sprintf(s, "\r\n{\"LED_BRIGHT\": %d}\n\r", json_LED_PWM);
      serial_to_all(s, ALL);  
      break;

    case TARGET_TYPE:                     // Over ride the target type if the switch is closed
      json_target_type = 0;
      if (HOLD1(json_multifunction) == TARGET_TYPE) // If the switch is set for a target type
      {
        if ( DIP_SW_A )
        {
          json_target_type = 1;           // 
        }
      }
      if (HOLD2(json_multifunction) == TARGET_TYPE) 
      {
        if ( DIP_SW_B )
        {
          json_target_type = 1;
        }
      }
      break;
      
    default:
      break;
  }



/*
 * All done, return
 */
  return;
}

void digital_test(void)
{
  double       volts;         // Reference Voltage
  volts = 0.0;
/*
 * Read in the fixed digital inputs
 */
  printf("\r\nTime: %4.2fs", (float)(esp_timer_get_time()/1000000));
  printf("\r\nBD Rev: %d", revision());  
  printf("\r\nDIP: 0x%02X", read_DIP()); 
  gpio_set_level(STOP_N, 0);
  gpio_set_level(STOP_N, 1);                        // Reset the fun flip flop
  printf("\r\nRUN FlipFlop: 0x%02X", is_running());   
  printf("\r\nTemperature: %4.2fdC", temperature_C());
  printf("\r\nSpeed of Sound: %4.2fmm/us", speed_of_sound(temperature_C(), json_rh));
  printf("\r\nV_REF: %4.f Volts", volts);
  printf("\r\n");

 /*
  * Blink the LEDs and exit
  */
//   POST_LEDs();
   return;
}

void rapid_red
(
  unsigned int state          // New state for the RED light
) 
{
  if ( HOLD1(json_multifunction2) == RAPID_RED )
  {
      gpio_set_level(DIP_0, state);
  }
  if ( HOLD2(json_multifunction2) == RAPID_RED )
  {
      gpio_set_level(DIP_C, state);
  }

  return;
}

void rapid_green
(
  unsigned int state          // New state for the RED light
) 
{
  if ( HOLD1(json_multifunction2) == RAPID_GREEN )
  {
      gpio_set_level(DIP_B, state);
  }
  if ( HOLD2(json_multifunction2) == RAPID_GREEN )
  {
      gpio_set_level(DIP_A, state);
  }

  return;
}
